# ELO

./: README.md
ELO-Admin/: CMakeLists.txt  CMakeLists.txt.user.c5e4d28  ELO-Admin_de_DE.ts  eloadmin.cpp  eloadmin.h  eloadmin.ui  gitoliteConf.h  main.cpp
Linux Deployment/: ELO-Qt-1.46-1-x86_64.pkg.tar.zst  ELO-Qt.desktop  PKGBUILD
Linux Deployment/pkg/ELO-Qt/: .BUILDINFO  .MTREE  .PKGINFO
Linux Deployment/pkg/ELO-Qt/opt/ELO-Qt/: ELO-NG
Linux Deployment/src/: ELO-Qt.desktop
Windows Depolyment/: ELO_inno_Setup.iss
